--- a/color-scheme-generator/src/App.css
+++ b/color-scheme-generator/src/App.css
@@ -43,6 +43,19 @@
 
 
 
-button {
+.upload {
   font-size: xx-large;
+}
+
+button {
+  font-size: large;
+}
+
+table {
+  border-collapse: collapse;
+}
+td {
+  width: 200px;
+  height: 200px;
+  border: 3px solid blue;
 }
