--- a/color-scheme-generator/src/App.css
+++ b/color-scheme-generator/src/App.css
@@ -60,16 +60,22 @@ input {
 button {
   font-size: large;
   margin: 15px;
+  width: 200px;
+  height: 50px;
+  margin-top: 30px;
 }
 
 table {
   border-collapse: collapse;
 }
 
-td.color {
+table.colors td{
   font-size: large;
-  width: 225px;
-  height: 225px;
+  width: 250px;
+}
+
+td.color {
+  height: 250px;
 }
 
 td.folder {
