--- a/color-scheme-generator/src/App.css
+++ b/color-scheme-generator/src/App.css
@@ -69,14 +69,9 @@ table {
   border-collapse: collapse;
 }
 
-table.colors td{
-  font-size: large;
-  width: 250px;
-}
 
-td.color {
-  height: 250px;
-}
+
+
 
 td.folder {
   max-width: 220px;
@@ -92,4 +87,31 @@ div.folder {
   padding: 10px;
   border: 1px black solid;
   background-color: white;
+}
+
+
+
+
+
+table.colors td{
+  font-size: large;
+  width: 250px;
+}
+
+td.color {
+  height: 250px;
+}
+
+
+
+th {
+  padding: 100px;
+}
+
+table.details {
+  width: 100%;
+}
+
+table.details td{
+  width: 16.65%;
 }
