--- a/color-scheme-generator/src/App.css
+++ b/color-scheme-generator/src/App.css
@@ -67,6 +67,10 @@ button {
   margin-top: 30px;
 }
 
+.delete {
+  color: red;
+}
+
 table {
   border-collapse: collapse;
 }
@@ -112,6 +116,13 @@ table.colors td{
 td.color {
   height: 250px;
 }
+
+.small {
+  font-size: x-small;
+}
+
+
+
 
 
 
