Added hover over for info on 2 results buttons

--- a/color-scheme-generator/src/App.css
+++ b/color-scheme-generator/src/App.css
@@ -80,7 +80,15 @@ table {
 
 img {
   max-width: 60%;
-  max-height: 60%;
+  max-height: 500px;
+}
+
+
+
+div.message {
+  max-width: 200px;
+  text-align: left;
+  margin-left: 30px
 }
 
 
