--- a/color-scheme-generator/src/style/app.css
+++ b/color-scheme-generator/src/style/app.css
@@ -3,14 +3,17 @@
 }
 
 .App-header {
-    background-color:bisque;
+    background-color:#5a5a5a;
+
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: calc(10px + 2vmin);
-    color: black;
+    color: white;
 }
 
 
@@ -32,12 +35,28 @@ table {
 
 
 button {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: large;
+
+    width: 201px;
+    height: 60px;
+
     margin: 15px;
-    width: 200px;
-    height: 50px;
-    margin-top: 30px;
+    margin-top: 50px;
+
     cursor: pointer;
+
+    background-color: #6e6e6e;
+    color: #e1e1e1;
+    border: 3px solid #b1b1b1;
+
+    
+}
+
+.side-button {
+    width: 500px;
+    padding-left: 110px;
+    padding-right: 110px;
 }
 
 .delete {
@@ -56,6 +75,9 @@ button {
     font-size: x-small;
 }
 
+.filler {
+    color: #5a5a5a;
+}
 
 
 
@@ -65,7 +87,7 @@ div.message {
     text-align: left;
     margin-left: 30px;
     position: absolute;
-    top: 20px;
+    top: 48px;
 }
 
 
